Prevent image for distorting

--- a/RentWise/wwwroot/css/shared/_DisplayPreview.css
+++ b/RentWise/wwwroot/css/shared/_DisplayPreview.css
@@ -11,7 +11,8 @@
     .display-preview img {
         width: 270px;
         height: 250px;
-        border-radius:.7rem;
+        border-radius: .7rem;
+        object-fit: cover;
     }
 
     .display-preview .content {
